<resources>

    <string name="app_name">WentWealth</string>

    <!-- Options Menu -->
    <string name="action_home">Home</string>
    <string name="action_wishlist">Wishlist</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity/Home Page Strings -->
    <string name="balanceTitle">Weekly Budget Balance</string>
    <string name="savingsTitle">Monthly Savings Goal</string>
    <string name="rolloverTitle">Rollover</string>
    <string name="rolloverBtn">ALLOCATE</string>
    <string name="positive">+$</string>
    <string name="negative">-$</string>
    <string name="defaultZero">0.00</string>
    <string name="defaultSavings">0</string>

    <!-- Add Menu Strings -->
    <string name="expenseOption">Expense</string>
    <string name="savingsOption">Savings</string>
    <string name="confirmBtn">Confirm</string>
    <string name="enterAmount">Enter Amount</string>

    <!-- Rollover Menu Strings -->
    <string name="budgetOption">Budget</string>
    <string name="savingOption">Savings</string>

    <!-- Settings Page Strings -->
    <string name="SettingsPageTitle">Settings</string>
    <string name="SetBudget">Set Weekly Budget</string>
    <string name="SetSavingsGoal">Set Monthly Savings Goal</string>

    <!-- Wishlist Strings -->
    <string name="title_activity_create_wishlist_item">Add New Item</string>
    <string name="title_activity_wishlist">Wishlist</string>


</resources>
